--- a/CG-231-B-206/esfera.htm
+++ b/CG-231-B-206/esfera.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Titulo</title>
+        <title>Segundo Parcial</title>
         <style>
             html, body { margin: 0; padding: 0; overflow: hidden; }
             #text {
